--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <p>
                       Hi! My name is Kashif Qamar, also known as QaMar JaNi . I
                       am a learner of Web Development and Programming. I was
-                      born in Dhaka, Bangladesh in 2003. I love coding, solving
+                      born in Peshawar, Pakistan in 2003. I love coding, solving
                       problems, reading books, and watching Diriliş: Ertuğrul &
                       Kuruluş: Osman. I'm very passionate and dedicated to my
                       work and love to learn new things every day. I determined
